# smb_bot

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
bot/: database.py  main.py  models.py
bot/commands/: add_chat.py  announce.py  best_qa.py  best_qa_stat.py  chat_list.py  docs.py  epa_contacts.py  epa_guide.py  get_access.py  help.py  remove_chat.py  search.py  start.py  vtb_support.py
bot/config/: flags.py  gpt_prompt.py  links.py  token.py  tokens.py
bot/menu/: helpers.py  main_menu.py  submenu.py
bot/messages/: bot_tag.py  filters.py  formatter.py  maslina.py  message_parse.py  messages.py  triggers.py  who_request.py
bot/modules/: buttons.py  commands_list.py  menu.py  messages.py
bot/services/: access_service.py  admin_service.py  alias_service.py  announce_service.py  best_qa_participants_service.py  best_qa_service.py  best_qa_stat_service.py  chat_service.py  commands_service.py  docs_service.py  menu_service.py  message_parse_service.py  message_service.py  parse_message_service.py  recent_links_service.py  search_service.py
bot/utils/: chat_manager.py  game_engine.py  handlers.py  message_parse.py  run_bot.py
tests/: test_error_handler.py  test_menu.py  test_messages.py
tests/commands/: test_add_chat.py  test_announce.py  test_best_qa.py  test_best_qa_stat.py  test_chat_list.py  test_docs.py  test_epa_contacts.py  test_epa_guide.py  test_get_access.py  test_help.py  test_search.py  test_start.py  test_vtb_support.py
tests/services/: test_commands_service.py
