[tool.poetry]
name = "smb-bot"
version = "0.1.0"
description = ""
authors = ["rocket-duck <dolanduckq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


packages = [
  { include = "bot" },
]


[tool.poetry.scripts]
bot = "bot.main:main"
