[tool.poetry]
name = "smb-bot"
version = "0.1.0"
description = ""
authors = ["void_duck"]
readme = "README.md"
packages = [
  { include = "bot" }
]

[tool.poetry.dependencies]
python = "^3.13"
aiogram = "^3.15.0"
openai = "^1.57.2"
dotenv = "^0.9.9"
sqlalchemy = "^2.0.38"
psycopg2-binary = "^2.9.10"
aiohttp = "^3.11.18"
sentence_transformers = "^4.1.0"
h11 = "^0.16.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bot = "bot.main:main"



